<resources>

    <string name="app_name">Task Force</string>
    <string name="menu_settings">About</string>
    <string name="title_activity_main">Task Force</string>
    <string name="enter">Enter</string>
    <string name="create_task">Create Task</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="liked_tasks">Your Liked Tasks</string>
    <string name="title">Title:</string>
    <string name="title_hint">Enter title here</string>
    <string name="items_attached">Items Attached:</string>
    <string name="plus_sign">+</string>
    <string name="number_sign">#</string>
    <string name="public_string">Public</string>
    <string name="private_string">Private</string>
    <string name="save_task">Save Task</string>
    <string name="save_item">Save Item</string>
    <string name="desired_num">Desired Number:</string>
    <string name="description">Description:</string>
    <string name="filter">Filter</string>
    <string name="test">Test Name</string>
    <string name="create_item">Create Item</string>
    <string name="tasks">Tasks</string>
    <string name="view_full_task">View/Fulfill Task</string>
    <string name="item_type">Item type</string>
    <string name="visibility">Task visibility</string>
    <string name="title_inputfile">Input File</string>
    <string name="files_attach_desc">attachfiles</string>
    <string name="save_changes">Save Changes</string>
    <string name="import_fromfile">From Files</string>
    <string name="import_capturepic">Take a Photo</string>
    <string name="import_captureaudio">Record Audio</string>
    <string name="import_capturevideo">Record Video</string>
    <string name="import_cancel">Cancel</string>
    <string name="about_task_force">Created by Colin Hunt, Edwin Chung, Kris Kushniruk, Tully Johnson</string>
    <string name="about_title">About Task Force</string>
    <string name="row_carrot">></string>
    <string name="row_title_blank">Title</string>
    <string name="row_sub_blank">Description</string>
    <string name="title_list_item">File List</string>
    <string name="title_activity_item_list">ItemList</string>
    <string name="single_task_item">Item: </string>
    <string name="single_task_item_desc">(click to fullfill)</string>
    <string name="prompt_confirm">Confirm</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="fulfill_response_type">Task fulfillment notification type</string>
    <string name="task_properties">Task Properties</string>
    <string name="email">E-mail</string>
    <string name="continue_string">Continue</string>
    <string name="email_hint">NoReply@TaskForce.com</string>
    <string name="like_task">Like this task</string>
    <string name="save_local">Save task locally</string>
    <string name="unlike_task">Unlike this task</string>
    <string name="update_local">Update local task information</string>


    <string-array name="item_choices">
        <item>Text</item>
        <item>Audio</item>
        <item>Photo</item>
        <item>Video</item>
    </string-array>
    <string-array name="response_choices">
        <item>E-mail</item>
        <item>Text</item>
        <item>Twitter</item>
    </string-array>
    <string-array name="filter_choices">
        <item>View Your Tasks</item>
        <item>View All Tasks</item>
        <item>View Your Liked Tasks</item>
        <item>View Your Local Tasks</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_input_text">Enter Text</string>
    <string name="text_instructions">Please enter your text:</string>
    <string name="no_data">No Data</string>
    <string name="title_activity_file_browser">File Browser</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_local_task_list">LocalTaskList</string>
    <string name="no_comment"/>
    <color name="black">#00000000</color>
    <string name="email_files">Email Files</string>
    <string name="preview_text">Preview Text</string>
    <string name="preview_picture">Preview Photo</string>
    <string name="preview_audio">Preview Audio</string>
    <string name="preview_video">Preview Video</string>

</resources>