<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="5dip"
        android:text="@string/fulfill_response_type"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dip" />

    <Spinner
        android:id="@+id/responseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/showNotificationType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/notificationResponse"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />         

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dip" />

    <TextView
        android:id="@+id/showVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/visibility"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dip" />

    <RadioGroup
        android:id="@+id/visibilityRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/public_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/public_string" />

        <RadioButton
            android:id="@+id/private_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/private_string" />
        
    </RadioGroup>
    
    <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/description"
      android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom|center_vertical"
        android:orientation="vertical" >
        
	    <EditText
	        android:id="@+id/description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textMultiLine" />
	    
	</LinearLayout>

    <Button
        android:id="@+id/returnToTask"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_string"
        android:onClick="returnTaskProperties" />
    
  </LinearLayout>

