<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@android:drawable/title_bar" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/title_inputfile"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>



    <ListView
        android:id="@+id/importList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/save"
        android:layout_below="@+id/linearLayout1">

    </ListView>


    <Button
        android:id="@+id/save"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/save_changes" />

    <ImageButton
        android:id="@+id/ImageButton01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/files_attach_desc"
        android:onClick="importFile"
        android:src="@android:drawable/ic_input_add" />

</RelativeLayout>